# peercred-ipc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/tests/: basic.rs  caller_info.rs  fd_passing.rs  mod.rs  server.rs
