[package]
name = "unix-ipc"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alessio Deiana <adeiana@gmail.com>"]
description = "Unix socket IPC with msgpack serialization"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
thiserror = "2"
libc = "0.2"
