[package]
name = "peercred-ipc"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alessio Deiana <adeiana@gmail.com>"]
description = "Unix socket IPC with msgpack serialization and SO_PEERCRED caller info"
repository = "https://github.com/Osso/peercred-ipc"
keywords = ["ipc", "unix-socket", "msgpack", "peercred"]
categories = ["network-programming", "asynchronous"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
thiserror = "2"
libc = "0.2"
